# python-cli-editable-install

./: .gitignore  README.md  pyproject.toml
src/snakesay/: __main__.py  snake.py
